# vuer-mujoco-demos

./: .gitattributes  .gitmodules  README.md  load_scene.py  pyproject.toml
scenes/: tri_demo_kitchen_room_shadow_hands.frame.yaml  tri_demo_kitchen_room_shadow_hands.mjcf.xml  tri_demo_ur5_tabletop.frame.yaml  tri_demo_ur5_tabletop.mjcf.xml
scenes/assets/ball_sorting_toy/LivingRoom/: LivingRoom.mtl
scenes/assets/kitchen/cup/visual/: material.mtl
scenes/assets/kitchen/fridge/: model.xml
scenes/assets/kitchen/spoon/: model.xml
scenes/assets/robohive/furniture_sim/simpleTable/: simpleTable_asset.xml
scenes/assets/robotiq_2f85/: base_mount.stl
util/: collect_asset_paths.py  file.py  rot_gs6.py  working_directory_context_manager.py
